--- a/src/components/portfolio/Contact.astro
+++ b/src/components/portfolio/Contact.astro
@@ -2,10 +2,10 @@
 import Heading from "../ui/Heading.astro";
 import Button from "../ui/Button.astro";
 
-const mail = "hello@efeele.dev";
-const title = "Ready to take your idea to the next level?";
-const subtitle = "Let's work together.";
-const buttonText = "Contact Me";
+const mail = "megaalfonso84@gmail.com";
+const title = "Llevemos proyectos tecnológicos al siguiente nivel.";
+const subtitle = "Trabajemos juntos.";
+const buttonText = "Contáctame";
 const buttonIcon = "paperplane";
 ---
 
