--- a/src/layouts/MarkdownAbout.astro
+++ b/src/layouts/MarkdownAbout.astro
@@ -45,7 +45,7 @@ const { frontmatter } = Astro.props;
               <div class="relative z-20 flex w-full rounded-full bg-mint-900">
                 <div
                   class="w-full aspect-square rounded-full bg-[url(/images/perfil.jpg)] bg-center bg-cover"
-                  aria-label="Photo of Fernando Aldair López Ponce (EFEELE) for the blog"
+                  aria-label="Foto de Alfonso Roldán Amador (alfonsora6) para el blog"
                 >
                   <a
                     href="/about-me"
@@ -66,18 +66,14 @@ const { frontmatter } = Astro.props;
             >
               <b
                 class="bg-gradient-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >Frontend Developer</b
-              > with <b
-                class="bg-gradient-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >8 years of experience</b
-              >, passionate about development, technology, and coffee that
-              sparks ideas. I love bringing digital projects to life. 🚀☕
+                >Administrador de sistemas</b
+              > con experiencia en la gestión de servidores, redes y entornos cloud. Apasionado por la tecnología, la mejora continua y la búsqueda de soluciones eficientes que simplifiquen procesos. ⚡💡
             </p>
           </div>
         </div>
       </div>
       <div class="flex gap-4 items-center">
-        <Heading text="About" textGradient="me" />
+        <Heading text="Sobre mí" />
       </div>
 
       <div class="markdown text-white" id="content">
@@ -90,7 +86,7 @@ const { frontmatter } = Astro.props;
     <div class="flex flex-col gap-8 pt-8 max-w-4xl mx-auto">
       <div class="flex gap-4 items-center justify-center">
         <Icon class="text-3xl text-white" name="briefcase" />
-        <Heading text="Experience" textGradient="Work" level={2} />
+        <Heading text="Experiencia" textGradient="Profesional" level={2} />
       </div>
 
       <Experience />
