--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -9,7 +9,7 @@ const {
   profileImage = "/images/perfil.jpg",
   profileAlt = "Foto de Alfonso Roldán Amador (alfonsora6) para el blog",
   profileLink = "/about-me",
-  profileTitle = "FrontEnd Developer",
+  profileTitle = "Administrador de sistemas",
   profileName = "Alfonso Roldán Amador",
   githubLink = "www.linkedin.com/in/alfonsora6",
   githubText = "Do you like this blog's design?",
@@ -84,7 +84,7 @@ const {
             ><b
               class="bg-gradient-to-r  from-riptide-400 to-mint-400 dark:from-riptide-200 dark:to-mint-400 text-transparent bg-clip-text"
               >{profileTitle}</b
-            > 🚀</span
+            ></span
           >
           <Heading
           text={profileName}
@@ -92,7 +92,7 @@ const {
         />
           <Button
             link={profileLink}
-            text="About Me"
+            text="Sobre mí"
             iconName="person"
             class="drop-shadow-xl"
           />
