--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -11,7 +11,7 @@ const menu = {
     name: "Blog", 
     path: "/blog/",
     dropdown: [
-      { name: "All Posts", path: "/blog/posts/" },
+      { name: "Todas las publicaciones", path: "/blog/posts/" },
     ]
   },
   home: { name: "Inicio", path: "/#home" },
@@ -154,7 +154,7 @@ const baseClasses = {
     role="group"
     aria-label="Social Media Links"
   >
-    <Social link="https://github.com/EFEELE" iconName="github" />
-    <Social link="https://www.linkedin.com/in/efeele/" iconName="linkedin" />
+    <Social link="https://github.com/alfonsora6" iconName="github" />
+    <Social link="https://www.linkedin.com/in/alfonsora6/" iconName="linkedin" />
   </div>
 </nav>
