--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,21 +4,21 @@ import Header from "../components/layout/Header.astro";
 import Footer from "../components/layout/Footer.astro";
 import  SpeedInsights  from "@vercel/speed-insights/astro"
 const {
-  pageTitle = "NeonMint by EFEELE 🚀",
-  description = "Welcome to NeonMint by EFEELE, where I develop software and share knowledge.",
+  pageTitle = "Portfolio alfonsora6",
+  description = "Bienvenido a mi sitio web, donde encontrarás información sobre quién soy, mi experiencia y trayectoria.",
   ogimage = {
     url: "/images/imagedefault.webp",
-    alt: "Default image of EFEELE",
+    alt: "Previsualización alfonsora6",
   },
 } = Astro.props;
 
 const siteUrl = new URL(Astro.url).origin;
 const SEO = {
-  sitename: "NeonMint by EFEELE🚀",
+  sitename: "Alfonso Roldán - Administrador de sistemas | Portfolio, Experiencia y Blog",
   url: siteUrl,
-  locale: "en_US",
-  author: "Fernando Lopez | EFEELE",
-  twitter: "@efeeledev",
+  locale: "es_ES",
+  author: "Alfonso Roldán | alfonsora6",
+  twitter: "",
 };
 
 
