--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -11,7 +11,7 @@ import Share from "../components/ui/Share.astro";
 const { frontmatter } = Astro.props;
 const currentUrl = `${Astro.site}${Astro.url.pathname}`;
 const tweetText = encodeURIComponent(
-  `"${frontmatter.title}" - by ${frontmatter.author} | EFEELE`
+  `"${frontmatter.title}" - por ${frontmatter.author} | alfonsora6`
 );
 import Heading from "../components/ui/Heading.astro";
 ---
@@ -94,7 +94,7 @@ import Heading from "../components/ui/Heading.astro";
         >
           <div class="white flex items-center gap-4">
             <div
-              aria-label="Photo of Fernando Aldair López Ponce (EFEELE) for the blog"
+              aria-label="Foto de Alfonso Roldán Amador (alfonsora6) para el blog"
               class="size-10 bg-cover bg-center rounded-full drop-shadow-lg"
               style="background-image: url(/images/efeeleprofile.webp);"
             >
