--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,11 +3,11 @@ import Layout from "../../layouts/Layout.astro";
 import Hero from "../../components/blog/Hero.astro";
 import Tags from "../../components/blog/Tags.astro";
 import ListPosts from "../../components/blog/ListPosts.astro";
-const pageTitle = "Web Development and Technology Blog | Fernando López | EFEELE";
-const description = "Welcome to my blog, where I share my passion for frontend development, web design, and the latest technology trends.";
+const pageTitle = "Sitio web con portfolio personal y blog | Alfonso Roldán | alfonsora6";
+const description = "Bienvenidos a mi blog, aquí podréis conocer quien soy y además ver mi experiencia y trayectoria.";
 const ogimage ={
     url: "/images/blogimage.webp",
-    alt: "EFEELE.dev logo with green background and light effect. Text: 'Web Development and Technology Blog' and URL 'www.efeele.dev'."
+    alt: "alfonsora6.com logo con fondo verde y efectos de luz. Text: 'Sitio web con portfolio personal y blog tecnológico' y URL 'www.alfonsora6.com'."
 };
 ---
 
