--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -11,7 +11,7 @@ const {
   profileLink = "/about-me",
   profileTitle = "Administrador de sistemas",
   profileName = "Alfonso Roldán Amador",
-  githubLink = "www.linkedin.com/in/alfonsora6",
+  githubLink = "https://github.com/alfonsora6/",
   githubText = "Do you like this blog's design?",
   techsTitle = "TECHS"
 } = Astro.props;
