--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon/components";
 const name = "Alfonso Roldán";
 const email = "megaalfonso84@gmail.com";
 const github = "https://github.com/alfonsora6";
-const linkedin = "www.linkedin.com/in/alfonsora6";
+const linkedin = "https://www.linkedin.com/in/alfonsora6";
 const instagram = "https://www.instagram.com/alfonso_ra6";
 ---
 
