--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -155,6 +155,6 @@ const baseClasses = {
     aria-label="Social Media Links"
   >
     <Social link="https://github.com/alfonsora6" iconName="github" />
-    <Social link="https://www.linkedin.com/in/alfonsora6/" iconName="linkedin" />
+    <Social link="https://linkedin.com/in/alfonsora6/" iconName="linkedin" />
   </div>
 </nav>
