--- a/src/components/portfolio/HeroIndex.astro
+++ b/src/components/portfolio/HeroIndex.astro
@@ -75,8 +75,7 @@ const  {
           <span
             class="bg-gradient-to-r from-riptide-500 to-mint-500 bg-clip-text font-black text-transparent   dark:from-riptide-300 dark:to-mint-200"
             >{profileTitle}</span
-          > con sólida experiencia gestionando infraestructuras tecnológicas y brindando soporte en entornos dinámicos. 
-            Apasionado por la tecnología de vanguardia, la automatización y la optimización de procesos. 🚀☕
+          > con sólida experiencia gestionando infraestructuras tecnológicas y brindando soporte en entornos dinámicos, ampliando mi perfil con una especialización en ciberseguridad. Apasionado por la tecnología de vanguardia, la automatización y la optimización de procesos. 🚀☕
         </p>
 
         <div class="flex gap-4 max-sm:flex-col max-sm:items-center">
